--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -29,9 +29,9 @@
 
         <TextView
             android:id="@+id/note_detail_title"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/note_detail_description"
